<resources>
    <string name="app_name">P1_tiwari_priyamvada</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>

    <!--game labels-->
    <string name="score_label">Score : </string>
    <string name="label_new_game_btn_text">New Game</string>
    <string name="label_change_game_img_btn_text">Change Image</string>
    <string name="label_solution_preview">Solution Preview</string>
    <string name="label_select_new_image">Select New Image</string>
    <string name="sub_image_view_id">imageView_</string>

    <!-- game messages-->
    <string name="message_game_won">Puzzle Solved!</string>
    <string name="message_cannot_move_tile">Cannot Move Tile</string>

    <!-- Image serial number Strings-->
    <string name="sub_image_0_0">Sub Image 0,0</string>
    <string name="sub_image_0_1">Sub Image 0,1</string>
    <string name="sub_image_0_2">Sub Image 0,2</string>
    <string name="sub_image_1_0">Sub Image 1,0</string>
    <string name="sub_image_1_1">Sub Image 1,1</string>
    <string name="sub_image_1_2">Sub Image 1,2</string>
    <string name="sub_image_2_0">Sub Image 2,0</string>
    <string name="sub_image_2_1">Sub Image 2,1</string>
    <string name="sub_image_2_2">Sub Image 2,2</string>

    <string name="puzzle_image1">Puzzle Image 1</string>
    <string name="puzzle_image2">Puzzle Image 2</string>
    <string name="puzzle_image3">Puzzle Image 3</string>
    <string name="puzzle_image4">Puzzle Image 4</string>
</resources>
