<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_select_new_image"
        android:id="@+id/select_image_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_gravity="center_horizontal"
        android:rowCount="2"
        android:columnCount="2"
        android:id="@+id/change_img_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/image_icon_height"
            android:id="@+id/puzzle_image1"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#eeeeee"
            android:src="@drawable/smiley1"
            android:contentDescription="@string/puzzle_image1"
            android:layout_margin="5dp"
            android:padding="2dp" />

        <ImageView
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/image_icon_height"
            android:id="@+id/puzzle_image2"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#eeeeee"
            android:src="@drawable/smiley2"
            android:contentDescription="@string/puzzle_image2"
            android:layout_margin="5dp"
            android:padding="2dp" />

        <ImageView
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/image_icon_height"
            android:id="@+id/puzzle_image3"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#eeeeee"
            android:src="@drawable/smiley3"
            android:contentDescription="@string/puzzle_image3"
            android:layout_margin="5dp"
            android:padding="2dp" />

        <ImageView
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/image_icon_height"
            android:id="@+id/puzzle_image4"
            android:layout_row="1"
            android:layout_column="1"
            android:background="#eeeeee"
            android:src="@drawable/smiley4"
            android:contentDescription="@string/puzzle_image4"
            android:layout_margin="5dp"
            android:padding="2dp" />
    </GridLayout>

</LinearLayout>